# altv-wasmer-module

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
.cargo/: config
altv-capi/: altv-capi-client.lib  altv-capi-extra.h  altv-capi-server.lib
altv-capi/client/: altv-capi.hpp
altv-capi/server/: altv-capi.hpp
capi/: Cargo.toml  build.rs
capi/src/: lib.rs
client/: Cargo.toml  build.rs
client/src/: altv_capi.rs  imports.rs  lib.rs
server/: Cargo.toml  build.rs
server/src/: ctxdata.rs  imports.rs  lib.rs  log.rs  memory.rs  wasm_resource.rs  wasm_runtime.rs  wasm_util.rs
src/: lib.rs  log.rs  resource.rs  util.rs  wasm_ctxdata.rs  wasm_imports.rs  wasm_memory.rs  wasm_pointers.rs
src/imports/: capi.rs  memory.rs  mod.rs  wasi.rs
src/wasm/: ctx.rs  ctxdata.rs  memory.rs  mod.rs  pointers.rs
src/wasm_capi/: mod.rs
