[package]
name = "altv_wasmer_module"
version = "0.0.1"
edition = "2018"
build = "build.rs"

[lib]
name = "altv_wasmer_module"
crate-type = ["staticlib", "cdylib"]

[dependencies]
altv-capi = { path = "capi" }
once_cell = "0.2.4"
wasmer-runtime = { version = "0.17.1", features = ["default-backend-cranelift"] }
#wasmer-wasi = "0.17.1"

[build-dependencies]
once_cell = "0.2.4"
serde = { version = "1.0.115", features = ["derive"] }
serde_repr = "0.1.6"
serde_json = { version = "1.0.57" }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.2"

[profile.release]
debug = true
