[package]
name = "altv_wasmer_module_server"
version = "0.0.1"
build = "build.rs"

[lib]
name = "altv_wasmer_module_server"
crate-type = ["cdylib"]

[dependencies]
wasmer-runtime = "0.4"
#lazy_static = "1.3.0"
libc = "0.2"
altv_server = { path = "D:/src/altv-rust-api/server" }
once_cell = "0.2.4"

[build-dependencies]
serde_json = "1.0.40"
